--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,14 +1,1 @@
-.wrapper {
-  width: 100%;
-  max-width: 1000px;
-  margin: auto;
-  display: flex;
-  justify-content: center;
-}
-
-.main {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  background-color: #f3f3f3;
-}
+main{display:flex;justify-content:center;min-height:600px;padding:20px}
