--- a/src/styles/sass/Home.module.scss
+++ b/src/styles/sass/Home.module.scss
@@ -3,4 +3,10 @@ main {
   justify-content: center;
   min-height: 600px;
   padding: 20px;
+  .main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
 }
