--- a/src/styles/sass/Home.module.scss
+++ b/src/styles/sass/Home.module.scss
@@ -1,12 +1,24 @@
-main {
+.first_section,
+.second_section {
   display: flex;
-  justify-content: center;
-  min-height: 600px;
+  flex-direction: column;
+  align-items: center;
   padding: 20px;
-  .main {
+  margin-bottom: 50px;
+  margin-top: 50px;
+  gap: 30px;
+  h2 {
+    text-transform: uppercase;
+  }
+  .first,
+  .second {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 20px;
   }
+}
+.second_section {
+  border-top: 1px solid rgba(51, 51, 51, 0.397);
 }
