--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import "./Home.module.css";
+@import "./Product.module.css";
 @import "./Footer.module.css";
 @import "./Header.module.css";
 @import "./Card.module.css";
