--- a/src/styles/sass/Home.module.scss
+++ b/src/styles/sass/Home.module.scss
@@ -1,5 +1,4 @@
-.first_section,
-.second_section {
+.first_section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,18 +6,4 @@
   margin-bottom: 50px;
   margin-top: 50px;
   gap: 30px;
-  h2 {
-    text-transform: uppercase;
-  }
-  .first,
-  .second {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
-  }
-}
-.second_section {
-  border-top: 1px solid rgba(51, 51, 51, 0.397);
 }
