--- a/src/styles/sass/Study.module.scss
+++ b/src/styles/sass/Study.module.scss
@@ -16,5 +16,24 @@
         margin-right: 5px;
       }
     }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      align-items: start;
+      justify-content: center;
+      margin-bottom: 20px;
+      > div {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+        input {
+          padding: 5px;
+        }
+      }
+    }
+  }
+  select {
+    padding: 5px;
   }
 }
